--- a/Nedelja1/Portfolio/index.html
+++ b/Nedelja1/Portfolio/index.html
@@ -144,6 +144,7 @@
             turnOff();
             i = Number(num);
             projects[i].style.display = 'block';
+            interval = setInterval(changeProject, 5000);
             turnOn();
         }
     </script>
